--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -130,3 +130,4 @@ disableuserinterface = false
 #1536500 = Euro Truck Simulator 2 - Heart of Russia
 #2604420 = Euro Truck Simulator 2 - Greece
 #3335300 = Euro Truck Simulator 2 - Greek Mythology Pack
+#1456860 = Euro Truck Simulator 2 - Farm Machinery
