--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -34,100 +34,108 @@ forceoffline = false
 disableuserinterface = false
 
 [dlc]
-#2579670 = Euro Truck Simulator 2 - Modern Lines Paint Jobs Pack
-#2455690 = Euro Truck Simulator 2 - Wielton Trailer Pack
-#227310 = Euro Truck Simulator 2 - Going East!
-#258460 = Euro Truck Simulator 2 - Halloween Paint Jobs Pack
-#266930 = Euro Truck Simulator 2 - Ice Cold Paint Jobs Pack
-#266931 = Euro Truck Simulator 2 - Prehistoric Paint Jobs Pack
-#292320 = Euro Truck Simulator 2 - Force of Nature Paint Jobs Pack
-#297790 = Euro Truck Simulator 2 - Metallic Paint Jobs Pack
-#297791 = Euro Truck Simulator 2 - UK Paint Jobs Pack
-#297792 = Euro Truck Simulator 2 - Irish Paint Jobs Pack
-#297793 = Euro Truck Simulator 2 - Scottish Paint Jobs Pack
-#301180 = Euro Truck Simulator 2 - Flip Paint Designs
-#304020 = Euro Truck Simulator 2 - Polish Paint Jobs Pack
-#304140 = Euro Truck Simulator 2 - Brazilian Paint Jobs Pack
-#304210 = Euro Truck Simulator 2 - Fantasy Paint Jobs Pack
-#304211 = Euro Truck Simulator 2 - USA Paint Jobs Pack
-#304212 = Euro Truck Simulator 2 - Scandinavia
-#304213 = Euro Truck Simulator 2 - Canadian Paint Jobs Pack
-#304214 = Euro Truck Simulator 2 - High Power Cargo Pack
-#318500 = Euro Truck Simulator 2 - German Paint Jobs Pack
-#318510 = Euro Truck Simulator 2 - French Paint Jobs Pack
-#318511 = Euro Truck Simulator 2 - Czech Paint Jobs Pack
-#318520 = Euro Truck Simulator 2 - Christmas Paint Jobs Pack
-#318521 = Euro Truck Simulator 2 - Raven Truck Design Pack
-#347190 = Euro Truck Simulator 2 - Norwegian Paint Jobs Pack
-#347210 = Euro Truck Simulator 2 - Danish Paint Jobs Pack
-#347211 = Euro Truck Simulator 2 - Swedish Paint Jobs Pack
-#347212 = Euro Truck Simulator 2 - Viking Legends
-#347213 = Euro Truck Simulator 2 - Russian Paint Jobs Pack
-#388470 = Euro Truck Simulator 2 - Cabin Accessories
-#388471 = Euro Truck Simulator 2 - Michelin Fan Pack
-#388472 = Euro Truck Simulator 2 - Japanese Paint Jobs Pack
-#388473 = Euro Truck Simulator 2 - PC Gamer DLC
-#388474 = Euro Truck Simulator 2 - Turkish Paint Jobs Pack
-#388475 = Euro Truck Simulator 2 - Wheel Tuning Pack
-#388476 = Euro Truck Simulator 2 - Italian Paint Jobs Pack
-#388477 = Euro Truck Simulator 2 - Schwarzmüller Trailer Pack
-#388478 = Euro Truck Simulator 2 - Rocket League Promo
-#388479 = Euro Truck Simulator 2 - Hungarian Paint Jobs Pack
-#461240 = Euro Truck Simulator 2 - Slovak Paint Jobs Pack
-#461241 = Euro Truck Simulator 2 - Spanish Paint Jobs Pack
-#461242 = Euro Truck Simulator 2 - Window Flags
-#461243 = Euro Truck Simulator 2 - Austrian Paint Jobs Pack
-#461244 = Euro Truck Simulator 2 - Mighty Griffin Tuning Pack
-#461245 = Euro Truck Simulator 2 - South Korean Paint Jobs Pack
-#461246 = Euro Truck Simulator 2 - Swiss Paint Jobs Pack
-#461247 = Euro Truck Simulator 2 - Chinese Paint Jobs Pack
-#461248 = Euro Truck Simulator 2 - Pirate Paint Jobs Pack
-#461249 = Euro Truck Simulator 2 - XF Tuning Pack
-#526950 = Euro Truck Simulator 2 - Lunar New Year Pack
-#531130 = Euro Truck Simulator 2 - Vive la France !
-#531131 = Euro Truck Simulator 2 - Heavy Cargo Pack
-#540720 = Euro Truck Simulator 2 - Finnish Paint Jobs Pack
-#540721 = Euro Truck Simulator 2 - Belgian Paint Jobs Pack
-#558240 = Euro Truck Simulator 2 - Dragon Truck Design Pack
-#558241 = Euro Truck Simulator 2 - Romanian Paint Jobs Pack
-#558242 = Euro Truck Simulator 2 - Australian Paint Jobs Pack
-#558243 = Euro Truck Simulator 2 - Valentine's Paint Jobs Pack
-#558244 = Euro Truck Simulator 2 - Italia
-#558245 = Euro Truck Simulator 2 - Special Transport
-#876980 = Euro Truck Simulator 2 - Portuguese Paint Jobs Pack
-#909640 = Euro Truck Simulator 2 - Dutch Paint Jobs Pack
-#925580 = Euro Truck Simulator 2 - Beyond the Baltic Sea
-#925650 = Euro Truck Simulator 2 - Space Paint Jobs Pack
-#933610 = Euro Truck Simulator 2 - Krone Trailer Pack
-#980590 = Euro Truck Simulator 2 - Estonian Paint Jobs Pack
-#980591 = Euro Truck Simulator 2 - Latvian Paint Jobs Pack
-#980592 = Euro Truck Simulator 2 - Lithuanian Paint Jobs Pack
-#1056760 = Euro Truck Simulator 2 - Road to the Black Sea
-#1056761 = Euro Truck Simulator 2 - Actros Tuning Pack
-#1068290 = Euro Truck Simulator 2 - Pink Ribbon Charity Pack
-#1117140 = Euro Truck Simulator 2 - Goodyear Tyres Pack
-#1159030 = Euro Truck Simulator 2 - Bulgarian Paint Jobs Pack
-#1209460 = Euro Truck Simulator 2 - Iberia
-#1209461 = Euro Truck Simulator 2 - HS-Schoch Tuning Pack
-#1299530 = Euro Truck Simulator 2 - FH Tuning Pack
-#1415700 = Euro Truck Simulator 2 - Super Stripes Paint Jobs Pack
-#1650650 = Euro Truck Simulator 2 - DAF XG/XG+
-#1704460 = Euro Truck Simulator 2 - Volvo Construction Equipment
-#1918370 = Euro Truck Simulator 2 - Ukrainian Paint Jobs Pack
-#1967640 = Euro Truck Simulator 2 - Renault Trucks T Tuning Pack
-#1967650 = Euro Truck Simulator 2 - Street Art Paint Jobs Pack
-#2193220 = Euro Truck Simulator 2 - Feldbinder Trailer Pack
-#2004210 = Euro Truck Simulator 2 - West Balkans
-#2569750 = Euro Truck Simulator 2 - Tirsan Trailer Pack
-#2611740 = Euro Truck Simulator 2 - DAF XD
-#2780800 = Euro Truck Simulator 2 - JCB Equipment Pack
-#2932420 = Euro Truck Simulator 2 - Renault Trucks E-Tech T
-#2833100 = Euro Truck Simulator 2 - Schmitz Cargobull Trailer Pack
-#3035040 = Euro Truck Simulator 2 - Scania S BEV
-#3034940 = Euro Truck Simulator 2 - Kögel Trailer Pack
-#3034950 = Euro Truck Simulator 2 - Kässbohrer Trailer Pack
-#2780810 = Euro Truck Simulator 2 - Nordic Horizons
-#1536500 = Euro Truck Simulator 2 - Heart of Russia
-#2604420 = Euro Truck Simulator 2 - Greece
-#3335300 = Euro Truck Simulator 2 - Greek Mythology Pack
-#1456860 = Euro Truck Simulator 2 - Farm Machinery
+; --- HARİTA GENİŞLETMELERİ
+#227310 = Map - Going East!
+#304212 = Map - Scandinavia
+#531130 = Map - Vive la France !
+#558244 = Map - Italia
+#925580 = Map - Beyond the Baltic Sea
+#1056760 = Map - Road to the Black Sea
+#1209460 = Map - Iberia
+#2004210 = Map - West Balkans
+#2780810 = Map - Nordic Horizons
+#1536500 = Map - Heart of Russia
+#2604420 = Map - Greece
+
+; --- TREYLER PAKETLERİ
+#2455690 = Trailer - Wielton Pack
+#388477 = Trailer - Schwarzmüller Pack
+#933610 = Trailer - Krone Pack
+#2193220 = Trailer - Feldbinder Pack
+#2569750 = Trailer - Tirsan Pack
+#2833100 = Trailer - Schmitz Cargobull Pack
+#3034940 = Trailer - Kögel Pack
+#3034950 = Trailer - Kässbohrer Pack
+#1456860 = Trailer - Farm Machinery
+
+; --- KARGO PAKETLERİ
+#304214 = Cargo - High Power
+#531131 = Cargo - Heavy Cargo
+#558245 = Cargo - Special Transport
+#1704460 = Cargo - Volvo Construction Equipment
+#2780800 = Cargo - JCB Equipment
+
+; --- TIR MODELLERİ
+#1650650 = Truck - DAF XG/XG+
+#2611740 = Truck - DAF XD
+#2932420 = Truck - Renault Trucks E-Tech T
+#3035040 = Truck - Scania S BEV
+
+; --- TUNING & AKSESUARLAR
+#388470 = Tuning - Cabin Accessories
+#388475 = Tuning - Wheel Pack
+#461244 = Tuning - Mighty Griffin Pack
+#461249 = Tuning - XF Pack
+#1056761 = Tuning - Actros Pack
+#1209461 = Tuning - HS-Schoch Pack
+#1299530 = Tuning - FH Pack
+#1967640 = Tuning - Renault Trucks T Pack
+#388471 = Tuning - Michelin Fan Pack
+#388473 = Tuning - PC Gamer DLC
+#461242 = Tuning - Window Flags
+#1068290 = Tuning - Pink Ribbon Charity Pack
+#1117140 = Tuning - Goodyear Tyres Pack
+
+; --- BOYA PAKETLERİ
+#2579670 = Paint - Modern Lines
+#258460 = Paint - Halloween
+#266930 = Paint - Ice Cold
+#266931 = Paint - Prehistoric
+#292320 = Paint - Force of Nature
+#297790 = Paint - Metallic
+#297791 = Paint - UK
+#297792 = Paint - Irish
+#297793 = Paint - Scottish
+#301180 = Paint - Flip Designs
+#304020 = Paint - Polish
+#304140 = Paint - Brazilian
+#304210 = Paint - Fantasy
+#304211 = Paint - USA
+#304213 = Paint - Canadian
+#318500 = Paint - German
+#318510 = Paint - French
+#318511 = Paint - Czech
+#318520 = Paint - Christmas
+#318521 = Paint - Raven Truck Design
+#347190 = Paint - Norwegian
+#347210 = Paint - Danish
+#347211 = Paint - Swedish
+#347212 = Paint - Viking Legends
+#347213 = Paint - Russian
+#388472 = Paint - Japanese
+#388474 = Paint - Turkish
+#388476 = Paint - Italian
+#388478 = Paint - Rocket League
+#388479 = Paint - Hungarian
+#461240 = Paint - Slovak
+#461241 = Paint - Spanish
+#461243 = Paint - Austrian
+#461245 = Paint - South Korean
+#461246 = Paint - Swiss
+#461247 = Paint - Chinese
+#461248 = Paint - Pirate
+#526950 = Paint - Lunar New Year
+#540720 = Paint - Finnish
+#540721 = Paint - Belgian
+#558240 = Paint - Dragon Truck Design
+#558241 = Paint - Romanian
+#558242 = Paint - Australian
+#558243 = Paint - Valentine's
+#876980 = Paint - Portuguese
+#909640 = Paint - Dutch
+#925650 = Paint - Space
+#1159030 = Paint - Bulgarian
+#1415700 = Paint - Super Stripes
+#1918370 = Paint - Ukrainian
+#1967650 = Paint - Street Art
+#3335300 = Paint - Greek Mythology
