--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -43,43 +43,51 @@ disableuserinterface = false
 #1056760 = Map - Road to the Black Sea
 #1209460 = Map - Iberia
 #2004210 = Map - West Balkans
-#2780810 = Map - Nordic Horizons
-#1536500 = Map - Heart of Russia
 #2604420 = Map - Greece
+#2780810 = Map - Nordic Horizons
+#3796990 = Map - Iceland
 
 ; --- TREYLER PAKETLERİ
-#2455690 = Trailer - Wielton Pack
-#388477 = Trailer - Schwarzmüller Pack
-#933610 = Trailer - Krone Pack
-#2193220 = Trailer - Feldbinder Pack
-#2569750 = Trailer - Tirsan Pack
-#2833100 = Trailer - Schmitz Cargobull Pack
-#3034940 = Trailer - Kögel Pack
-#3034950 = Trailer - Kässbohrer Pack
-#1456860 = Trailer - Farm Machinery
+#2455690 = Trailer - Wielton Trailer Pack
+#388477 = Trailer - Schwarzmüller Trailer Pack
+#933610 = Trailer - Krone Trailer Pack
+#2193220 = Trailer - Feldbinder Trailer Pack
+#2569750 = Trailer - TIRSAN Trailer Pack
+#2833100 = Trailer - Schmitz Cargobull Trailer Pack
+#3034940 = Trailer - Kögel Trailer Pack
+#3034950 = Trailer - Kässbohrer Trailer Pack
 
 ; --- KARGO PAKETLERİ
-#304214 = Cargo - High Power
-#531131 = Cargo - Heavy Cargo
+#304214 = Cargo - High Power Cargo Pack
+#531131 = Cargo - Heavy Cargo Pack
 #558245 = Cargo - Special Transport
 #1704460 = Cargo - Volvo Construction Equipment
-#2780800 = Cargo - JCB Equipment
+#2780800 = Cargo - JCB Equipment Pack
+#1456860 = Cargo - Farm Machinery
+#3872920 = Cargo - KRONE Agriculture Equipment
 
 ; --- TIR MODELLERİ
 #1650650 = Truck - DAF XG/XG+
 #2611740 = Truck - DAF XD
 #2932420 = Truck - Renault Trucks E-Tech T
 #3035040 = Truck - Scania S BEV
+#2371170 = Truck - MAN TGX
+#3354860 = Truck - Iveco S-Way
+#3323350 = Truck - Volvo FH Series 5
+#3323360 = Truck - Volvo FH Series 6
+
+; --- OTOBÜS MODELLERİ
+#3809270 = Bus - Coaches
 
 ; --- TUNING & AKSESUARLAR
 #388470 = Tuning - Cabin Accessories
-#388475 = Tuning - Wheel Pack
-#461244 = Tuning - Mighty Griffin Pack
-#461249 = Tuning - XF Pack
-#1056761 = Tuning - Actros Pack
-#1209461 = Tuning - HS-Schoch Pack
-#1299530 = Tuning - FH Pack
-#1967640 = Tuning - Renault Trucks T Pack
+#388475 = Tuning - Wheel Tuning Pack
+#461244 = Tuning - Mighty Griffin Tuning Pack
+#461249 = Tuning - XF Tuning Pack
+#1056761 = Tuning - Actros Tuning Pack
+#1209461 = Tuning - HS-Schoch Tuning Pack
+#1299530 = Tuning - FH Tuning Pack
+#1967640 = Tuning - Renault Trucks T Tuning Pack
 #388471 = Tuning - Michelin Fan Pack
 #388473 = Tuning - PC Gamer DLC
 #461242 = Tuning - Window Flags
@@ -87,55 +95,58 @@ disableuserinterface = false
 #1117140 = Tuning - Goodyear Tyres Pack
 
 ; --- BOYA PAKETLERİ
-#2579670 = Paint - Modern Lines
-#258460 = Paint - Halloween
-#266930 = Paint - Ice Cold
-#266931 = Paint - Prehistoric
-#292320 = Paint - Force of Nature
-#297790 = Paint - Metallic
-#297791 = Paint - UK
-#297792 = Paint - Irish
-#297793 = Paint - Scottish
-#301180 = Paint - Flip Designs
-#304020 = Paint - Polish
-#304140 = Paint - Brazilian
-#304210 = Paint - Fantasy
-#304211 = Paint - USA
-#304213 = Paint - Canadian
-#318500 = Paint - German
-#318510 = Paint - French
-#318511 = Paint - Czech
-#318520 = Paint - Christmas
-#318521 = Paint - Raven Truck Design
-#347190 = Paint - Norwegian
-#347210 = Paint - Danish
-#347211 = Paint - Swedish
+#2579670 = Paint - Modern Lines Paint Jobs Pack
+#258460 = Paint - Halloween Paint Jobs Pack
+#266930 = Paint - Ice Cold Paint Jobs Pack
+#266931 = Paint - Prehistoric Paint Jobs Pack
+#292320 = Paint - Force of Nature Paint Jobs Pack
+#297790 = Paint - Metallic Paint Jobs Pack
+#297791 = Paint - UK Paint Jobs Pack
+#297792 = Paint - Irish Paint Jobs Pack
+#297793 = Paint - Scottish Paint Jobs Pack
+#301180 = Paint - Flip Paint Designs
+#304020 = Paint - Polish Paint Jobs Pack
+#304140 = Paint - Brazilian Paint Jobs Pack
+#304210 = Paint - Fantasy Paint Jobs Pack
+#304211 = Paint - USA Paint Jobs Pack
+#304213 = Paint - Canadian Paint Jobs Pack
+#318500 = Paint - German Paint Jobs Pack
+#318510 = Paint - French Paint Jobs Pack
+#318511 = Paint - Czech Paint Jobs Pack
+#318520 = Paint - Christmas Paint Jobs Pack
+#318521 = Paint - Raven Truck Design Pack
+#347190 = Paint - Norwegian Paint Jobs Pack
+#347210 = Paint - Danish Paint Jobs Pack
+#347211 = Paint - Swedish Paint Jobs Pack
 #347212 = Paint - Viking Legends
-#347213 = Paint - Russian
-#388472 = Paint - Japanese
-#388474 = Paint - Turkish
-#388476 = Paint - Italian
-#388478 = Paint - Rocket League
-#388479 = Paint - Hungarian
-#461240 = Paint - Slovak
-#461241 = Paint - Spanish
-#461243 = Paint - Austrian
-#461245 = Paint - South Korean
-#461246 = Paint - Swiss
-#461247 = Paint - Chinese
-#461248 = Paint - Pirate
-#526950 = Paint - Lunar New Year
-#540720 = Paint - Finnish
-#540721 = Paint - Belgian
-#558240 = Paint - Dragon Truck Design
-#558241 = Paint - Romanian
-#558242 = Paint - Australian
-#558243 = Paint - Valentine's
-#876980 = Paint - Portuguese
-#909640 = Paint - Dutch
-#925650 = Paint - Space
-#1159030 = Paint - Bulgarian
-#1415700 = Paint - Super Stripes
-#1918370 = Paint - Ukrainian
-#1967650 = Paint - Street Art
-#3335300 = Paint - Greek Mythology
+#347213 = Paint - Russian Paint Jobs Pack
+#388472 = Paint - Japanese Paint Jobs Pack
+#388474 = Paint - Turkish Paint Jobs Pack
+#388476 = Paint - Italian Paint Jobs Pack
+#388478 = Paint - Rocket League Promo
+#388479 = Paint - Hungarian Paint Jobs Pack
+#461240 = Paint - Slovak Paint Jobs Pack
+#461241 = Paint - Spanish Paint Jobs Pack
+#461243 = Paint - Austrian Paint Jobs Pack
+#461245 = Paint - South Korean Paint Jobs Pack
+#461246 = Paint - Swiss Paint Jobs Pack
+#461247 = Paint - Chinese Paint Jobs Pack
+#461248 = Paint - Pirate Paint Jobs Pack
+#526950 = Paint - Lunar New Year Pack
+#540720 = Paint - Finnish Paint Jobs Pack
+#540721 = Paint - Belgian Paint Jobs Pack
+#558240 = Paint - Dragon Truck Design Pack
+#558241 = Paint - Romanian Paint Jobs Pack
+#558242 = Paint - Australian Paint Jobs Pack
+#558243 = Paint - Valentine's Paint Jobs Pack
+#876980 = Paint - Portuguese Paint Jobs Pack
+#909640 = Paint - Dutch Paint Jobs Pack
+#925650 = Paint - Space Paint Jobs Pack
+#1159030 = Paint - Bulgarian Paint Jobs Pack
+#1415700 = Paint - Super Stripes Paint Jobs Pack
+#1918370 = Paint - Ukrainian Paint Jobs Pack
+#1967650 = Paint - Street Art Paint Jobs Pack
+#3335300 = Paint - Greek Mythology Pack
+#980590 = Paint - Estonian Paint Jobs Pack
+#980591 = Paint - Latvian Paint Jobs Pack
+#980592 = Paint - Lithuanian Paint Jobs Pack
