--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -44,8 +44,6 @@ disableuserinterface = false
 #1209460 = Map - Iberia
 #2004210 = Map - West Balkans
 #2604420 = Map - Greece
-#2780810 = Map - Nordic Horizons
-#3796990 = Map - Iceland
 
 ; --- TREYLER PAKETLERİ
 #2455690 = Trailer - Wielton Trailer Pack
@@ -64,7 +62,6 @@ disableuserinterface = false
 #1704460 = Cargo - Volvo Construction Equipment
 #2780800 = Cargo - JCB Equipment Pack
 #1456860 = Cargo - Farm Machinery
-#3872920 = Cargo - KRONE Agriculture Equipment
 
 ; --- TIR MODELLERİ
 #1650650 = Truck - DAF XG/XG+
@@ -76,7 +73,7 @@ disableuserinterface = false
 #3323350 = Truck - Volvo FH Series 5
 #3323360 = Truck - Volvo FH Series 6
 
-; --- OTOBÜS MODELLERİ
+; --- OTOBUS MODELLERİ
 #3809270 = Bus - Coaches
 
 ; --- TUNING & AKSESUARLAR
