--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -41,8 +41,11 @@ disableuserinterface = false
 #925580 = Map - Beyond the Baltic Sea
 #1056760 = Map - Road to the Black Sea
 #1209460 = Map - Iberia
+#1536500 = Map - Heart of Russia
 #2004210 = Map - West Balkans
 #2604420 = Map - Greece
+#2780810 = Map - Nordic Horizons
+#3796990 = Map - Iceland
 #2455690 = Trailer - Wielton Trailer Pack
 #388477 = Trailer - Schwarzmüller Trailer Pack
 #933610 = Trailer - Krone Trailer Pack
@@ -57,6 +60,7 @@ disableuserinterface = false
 #1704460 = Cargo - Volvo Construction Equipment
 #2780800 = Cargo - JCB Equipment Pack
 #1456860 = Cargo - Farm Machinery
+#3872920 = Cargo - KRONE Agriculture Equipment
 #1650650 = Truck - DAF XG/XG+
 #2611740 = Truck - DAF XD
 #2932420 = Truck - Renault Trucks E-Tech T
