Comment out Forest Machinery entry in cream_api.ini

--- a/disable/cream_api.ini
+++ b/disable/cream_api.ini
@@ -61,6 +61,7 @@ disableuserinterface = false
 #2780800 = Cargo - JCB Equipment Pack
 #1456860 = Cargo - Farm Machinery
 #3872920 = Cargo - KRONE Agriculture Equipment
+#4159240 = Cargo - Forest Machinery
 #1650650 = Truck - DAF XG/XG+
 #2611740 = Truck - DAF XD
 #2932420 = Truck - Renault Trucks E-Tech T
